@@ -5,10 +5,7 @@ features for next releases:
 		- translations (gettext);
 		- custom groups
 		- per-section permissions for groups;
-		
-		
-		+ Add new subnet on subnet details (selects parent as master)
-		+ Edit subnet from search result;
+
 		
 		+ Split subnets to multiple sub-subnets based on provided mask;
 		+ Change subnets mask size;
